--- a/templates/base.html
+++ b/templates/base.html
@@ -29,11 +29,11 @@
       {% block content %}{% endblock %}
 
       {% block pagination %}
+        {% include "includes/pagination.html" %}
       {% endblock %}
 
     </div>
   </div>
 </div>
 </body>
-
 </html>
